# sheetstorm

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  start.sh  update_mitre_data.sh
.github/: copilot-instructions.md
assets/docs/: api-reference.md  architecture.md  mcp-auth-research.md  refactoring_prompt.md  roadmap.md  websocket-events.md
backend/: Dockerfile  pyproject.toml  requirements.txt  verify_schemas.py  wsgi.py
backend/app/: __init__.py  config.py  seed.py
backend/app/data/: mitre_patterns.yaml
backend/app/middleware/: __init__.py  audit.py  rbac.py  sanitize.py
backend/app/models/: __init__.py  artifact.py  attack_graph.py  audit.py  base.py  case_note.py  compromised.py  custom_field.py  incident.py  integration.py  ioc.py  notification.py  organization.py  report.py  task.py  team.py  timeline.py  user.py
backend/app/schemas/: auth.py  base.py  incident.py
backend/app/services/: __init__.py  ai_service.py  chain_of_custody_service.py  encryption_service.py  enrichment_service.py  google_drive_service.py  graph_automation_service.py  hash_service.py  import_service.py  integration_config.py  mitre_suggest_service.py  notification_service.py  storage_service.py  supabase_role_sync.py
backend/migrations/: env.py
backend/migrations/versions/: add_case_notes_kill_chain.py  add_created_at_to_incident_assignments.py  add_host_correlations.py  add_incident_team_access.py  add_mfa_backup_codes.py  add_mitre_mappings_jsonb.py  add_performance_indexes.py  add_soft_delete_columns.py  add_teams_and_org_roles.py  expand_audit_log_fields.py  expand_containment_status.py  platform_refactor_v2.py  rename_is_deleted_to_is_archived.py  rename_metadata_to_extra_data.py  restrict_viewer_permissions.py  update_account_type_check.py  update_edge_types.py  update_incident_status_check.py  update_integration_type_check.py  update_node_types.py  update_report_type_check.py
backend/scripts/: generate_d3fend_data.py  generate_mitre_attack_data.py
database/: Dockerfile
database/init/: 002_schema.sql  003_seed_roles.sql
docs/: architecture.md  configuration.md  development.md  mcp-server-roadmap.md
frontend/: .build-stamp  .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-incident-data.ts  use-socket.ts
frontend/src/lib/: api.ts  design-tokens.ts  feature-stores.ts  sanitize.ts  store.ts  supabase.ts  utils.ts  validations.ts
mcp-bridge/: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
mcp-bridge/sheetstorm_bridge/: __init__.py  __main__.py  client.py  config.py  server.py
mcp-bridge/sheetstorm_bridge/tools/: __init__.py  admin.py  advanced_analysis.py  artifacts.py  assets.py  attack_graph.py  auth.py  case_notes.py  defang.py  incidents.py  iocs.py  knowledge_base.py  prompts.py  reports.py  resources.py  tasks.py  threat_intel.py  timeline.py
mcp-server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
mcp-server/sheetstorm_mcp/: __init__.py  __main__.py  auth_middleware.py  client.py  config.py  login_routes.py  oauth_provider.py  server.py
mcp-server/sheetstorm_mcp/tools/: __init__.py  admin.py  advanced_analysis.py  artifacts.py  assets.py  assignments.py  attack_graph.py  auth.py  case_notes.py  defang.py  incidents.py  iocs.py  knowledge_base.py  prompts.py  reports.py  resources.py  tasks.py  threat_intel.py  timeline.py
proxy/: Dockerfile  nginx.conf
(+146 files in other folders)
